--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 18:05:02 2018</p>
+         Last Run: Mon Nov 19 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,34 +30,34 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-1</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>64</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
                         <td>0</td>
-                        <td>70</td>
+                        <td>-3</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>69</td>
+                        <td>0</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>71</td>
                         <td>0</td>
                         <td>10</td>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
-                 "-4",
+                 "-2",
+                 "-3",
                  "-4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "1",
-                 "-1",
+                 "0",
                  "-1"
                ]
              }
@@ -162,7 +162,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "70",
+                 "67",
+                 "69",
                  "71"
                ]
              },
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "31",
                  "27",
-                 "17",
                  "14"
                ]
              }
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 18:05:02 2018</p>
+         Last Run: Mon Nov 19 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -250,7 +250,7 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
@@ -262,7 +262,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
@@ -274,11 +274,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "59",
-                 "61"
+                 "57",
+                 "60",
+                 "62"
                ]
              },
              {
@@ -400,7 +400,7 @@
                "data":[
                  "78",
                  "71",
-                 "65"
+                 "66"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 18:05:02 2018</p>
+         Last Run: Mon Nov 19 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -469,19 +469,19 @@
                         <td>1</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -489,23 +489,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>54</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>42</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -608,9 +608,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
                  "1",
-                 "2"
+                 "1",
+                 "1"
                ]
              },
              {
@@ -621,7 +621,7 @@
                "data":[
                  "63",
                  "57",
-                 "54",
+                 "53",
                  "54"
                ]
              },
@@ -631,10 +631,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "49",
-                 "49",
-                 "42"
+                 "48",
+                 "48",
+                 "48",
+                 "41"
                ]
              }
            ]
@@ -674,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 18:05:02 2018</p>
+         Last Run: Mon Nov 19 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -695,39 +695,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>7</td>
-                        <td>58</td>
-                        <td>1</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>60</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>7</td>
-                        <td>54</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-5</td>
+                        <td>3</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>63</td>
+                        <td>56</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>3</td>
+                        <td>56</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>NW</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>7</td>
-                        <td>51</td>
+                        <td>3</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,8 +754,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-5",
                  "-4",
-                 "-3",
                  "-3"
                ]
              },
@@ -766,8 +766,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-2",
                  "-1",
-                 "0",
                  "0"
                ]
              }
@@ -825,9 +825,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "7"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -836,9 +836,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "54",
-                 "51"
+                 "59",
+                 "56",
+                 "52"
                ]
              },
              {
@@ -847,9 +847,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "63",
-                 "65"
+                 "56",
+                 "58",
+                 "60"
                ]
              }
            ]
