--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 19:05:02 2018</p>
+         Last Run: Mon Nov 19 20:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>67</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>31</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>0</td>
-                        <td>69</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>0</td>
-                        <td>71</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>14</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "69",
-                 "71"
+                 "71",
+                 "72",
+                 "73"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "27",
-                 "14"
+                 "24",
+                 "22",
+                 "18"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 19:05:02 2018</p>
+         Last Run: Mon Nov 19 20:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,10 +247,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
@@ -262,7 +262,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>60</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
@@ -274,11 +274,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "-2",
                  "-2"
                ]
@@ -317,7 +317,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
+                 "2",
                  "2",
                  "2"
                ]
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "55",
                  "57",
-                 "60",
-                 "62"
+                 "61"
                ]
              },
              {
@@ -400,7 +400,7 @@
                "data":[
                  "78",
                  "71",
-                 "66"
+                 "65"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 19:05:02 2018</p>
+         Last Run: Mon Nov 19 20:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -469,7 +469,7 @@
                         <td>1</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -477,11 +477,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -489,7 +489,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -500,12 +500,12 @@
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>54</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>41</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -610,7 +610,7 @@
                  "2",
                  "1",
                  "1",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -620,8 +620,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "63",
-                 "57",
-                 "53",
+                 "58",
+                 "54",
                  "54"
                ]
              },
@@ -631,10 +631,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "49",
+                 "49",
                  "48",
-                 "48",
-                 "48",
-                 "41"
+                 "42"
                ]
              }
            ]
@@ -674,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 19:05:02 2018</p>
+         Last Run: Mon Nov 19 20:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -697,37 +697,37 @@
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-4</td>
                         <td>3</td>
                         <td>59</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NW</td>
-                        <td>56</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
-                        <td>-3</td>
-                        <td>3</td>
+                        <td>-2</td>
+                        <td>2</td>
                         <td>52</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NW</td>
-                        <td>60</td>
+                        <td>62</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,9 +754,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
                  "-4",
-                 "-3"
+                 "-4",
+                 "-2"
                ]
              },
              {
@@ -826,8 +826,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "3",
-                 "3"
+                 "2",
+                 "2"
                ]
              },
              {
@@ -847,9 +847,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
                  "58",
-                 "60"
+                 "60",
+                 "62"
                ]
              }
            ]
