--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 20:05:06 2018</p>
+         Last Run: Mon Nov 19 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>09:00 PM</td>
-                        <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>0</td>
-                        <td>71</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>24</td>
-                     </tr>
-                     <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>72</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>22</td>
+                        <td>6</td>
+                        <td>W</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
-                        <td>-4</td>
+                        <td>-3</td>
                         <td>0</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "09:00 PM",
              "10:00 PM",
              "11:00 PM"
            ],
@@ -90,8 +77,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-3",
-                 "-4"
+                 "-3"
                ]
              },
              {
@@ -101,7 +87,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
                  "0",
                  "-1"
                ]
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "09:00 PM",
              "10:00 PM",
              "11:00 PM"
            ],
@@ -161,7 +145,6 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "72",
-                 "73"
+                 "74",
+                 "75"
                ]
              },
              {
@@ -182,9 +164,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "22",
-                 "18"
+                 "14",
+                 "12"
                ]
              }
            ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 20:05:06 2018</p>
+         Last Run: Mon Nov 19 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,14 +228,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
                         <td>55</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -262,11 +243,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>57</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -278,7 +259,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +286,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "-2",
                  "-2"
                ]
@@ -317,7 +298,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
+                 "3",
                  "2",
                  "2"
                ]
@@ -388,7 +369,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "57",
+                 "59",
                  "61"
                ]
              },
@@ -398,9 +379,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "71",
-                 "65"
+                 "79",
+                 "72",
+                 "66"
                ]
              }
            ]
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 20:05:06 2018</p>
+         Last Run: Mon Nov 19 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -469,7 +450,7 @@
                         <td>1</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -477,11 +458,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -489,7 +470,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -500,12 +481,12 @@
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>54</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>42</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -610,7 +591,7 @@
                  "2",
                  "1",
                  "1",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -620,8 +601,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "63",
-                 "58",
-                 "54",
+                 "57",
+                 "53",
                  "54"
                ]
              },
@@ -631,10 +612,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "49",
                  "48",
-                 "42"
+                 "48",
+                 "48",
+                 "41"
                ]
              }
            ]
@@ -674,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 20:05:06 2018</p>
+         Last Run: Mon Nov 19 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -703,31 +684,31 @@
                         <td>1</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-2</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>52</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>62</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -826,8 +807,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "2",
-                 "2"
+                 "3",
+                 "3"
                ]
              },
              {
@@ -847,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "60",
-                 "62"
+                 "57",
+                 "59",
+                 "61"
                ]
              }
            ]
